# daw

./: .env.example  .gitignore  Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20251122_133745_create_tenants.rs  m20251122_133748_create_users.rs  m20251122_133751_create_rides.rs  m20251122_190000_create_drivers.rs  m20251123_000001_create_ride_events.rs  m20251123_000002_create_driver_events.rs
src/: error.rs  main.rs  state.rs
src/config/: mod.rs
src/db/: mod.rs
src/dto/: auth.rs  mod.rs  tenant.rs  user.rs
src/entity/: driver.rs  driver_event.rs  mod.rs  ride.rs  ride_event.rs  tenant.rs  user.rs
src/handlers/: auth_handler.rs  driver_handler.rs  event_handler.rs  mod.rs  ride_handler.rs  tenant_handler.rs  user_handler.rs
src/jresponse/: mod.rs  ride_jresponse.rs  tenant_jresponse.rs  user_jresponse.rs
src/middleware/: auth_middleware.rs
src/qrushes/: mod.rs  qrush_init.rs
src/qrushes/crons/: daily_report_job.rs  mod.rs
src/qrushes/jobs/: dispatch_ride_job.rs  mod.rs  notify_user.rs
src/requests/: mod.rs  structures.rs  validation.rs
src/routes/: auth.rs  driver.rs  event.rs  mod.rs  ride.rs  tenant.rs  user.rs  ws.rs
src/services/: auth_service.rs  debug_ws_service.rs  driver_service.rs  event_service.rs  mod.rs  ride_service.rs  tenant_service.rs  user_service.rs
src/types/: mod.rs  request_keys.rs
src/utils/: current_user.rs  jwt_util.rs  mod.rs  pagination.rs  redis_geo.rs  redis_service.rs  surge.rs  ws_auth.rs
src/ws/: mod.rs
