# /Users/xsm/Documents/workspace/xtras/daw/Cargo.toml
[workspace]
members = [
    ".",
    "migration",
]

[package]
name = "ride-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
validator = { version = "0.18", features = ["derive"] }

thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
config = "0.14"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

sea-orm = { version = "1.1.19", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

migration = { path = "migration" }
actix-web-httpauth = "0.8.2"
rand = "0.9.2"
jsonwebtoken = { version = "10.2", default-features = false, features = ["rust_crypto"] }


# Remove these unless you explicitly use them in your own code.
# SeaORM brings its own compatible strum.
# strum = "0.25"
# strum_macros = "0.25"
